# AheadLibEx

./: .gitignore  AheadLibCommon.h  AheadLibEx.cpp  AheadLibEx.rc  AheadLibEx.sln  AheadLibEx.vcxproj  AheadLibEx.vcxproj.filters  AheadLibExDlg.cpp  AheadLibExDlg.h  Cargo.toml  README.md  README.zh-CN.md  framework.h  pch.h  resource.h
code/: AheadLibEx.cpp  AheadLibExDlg.cpp
header/: AheadLibEx.h  AheadLibExDlg.h  framework.h
include/: AheadLibCommon.h  framework.h  pch.h
old/: AheadLibEx.cpp  AheadLibEx.h
old/res/: AheadLibEx.rc2
res/: AheadLibEx.rc  RCc04796  resource.h
src/: gui.rs  lib.rs  main.rs  templates.rs  ui_events.rs
src/application/: mod.rs  ui_events.rs
src/domain/: dll.rs  mod.rs
src/gui/: ui_events.rs
src/infrastructure/: templates.rs
src/presentation/: gui.rs  mod.rs
templates/cmake/: CMakeLists.txt.tpl
templates/common/: proxy.c.tpl  proxy_jump.asm.tpl  proxy_x64.c.tpl  proxy_x64_jump.S.tpl  proxy_x64_jump.asm.tpl  proxy_x86.c.tpl  proxy_x86_jump.S.tpl  proxy_x86_jump.asm.tpl
templates/vs2022/: vs2022_filters.vcxproj.filters.tpl  vs2022_project.vcxproj.tpl  vs2022_project.vcxproj.user.tpl  vs2022_solution.sln.tpl
templates/vs2026/: vs2026_project.vcxproj.filters.tpl  vs2026_project.vcxproj.tpl  vs2026_solution.slnx.tpl
tests/: origin_load_modes.rs  templates_decorated.rs
vcxproj/: AheadLibEx.vcxproj  AheadLibEx.vcxproj.filters
