[package]
name = "aheadlibex-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.28", default-features = false, features = ["glow"] }
rfd = "0.14"
goblin = { version = "0.8", default-features = false, features = ["pe64", "std"] }
memmap2 = "0.9"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
